--- a/styles/global.css
+++ b/styles/global.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .intro {
-  @apply leading-6 font-semibold prose prose-lg prose-a:text-verde;
+  @apply leading-6 font-semibold text-center prose prose-lg prose-a:text-verde;
 }
 
 .bio {
@@ -12,4 +12,11 @@
 
 .cv {
   @apply leading-5 prose prose-sm prose-a:font-normal prose-a:text-verde;
+}
+
+*{
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
 }
