--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,10 @@
   @apply leading-5 prose prose-sm prose-a:font-normal prose-a:text-verde;
 }
 
+.feed {
+  @apply mt-4 leading-5 prose prose-sm prose-a:font-normal prose-a:text-verde;
+}
+
 /* hide scrollbar */
 * {
   -ms-overflow-style: none;
