--- a/styles/global.css
+++ b/styles/global.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 .intro {
-  @apply leading-6 font-semibold text-center prose prose-lg prose-a:text-verde;
+  @apply max-w-full prose-p:leading-snug prose-p:text-black prose-p:font-semibold text-center prose prose-lg prose-a:text-verde;
 }
 
 .bio {
-  @apply leading-6 prose prose-a:font-normal prose-a:text-verde;
+  @apply mt-10 max-w-full prose-p:text-justify prose-p:leading-snug prose prose-a:font-normal prose-a:text-verde;
 }
 
 .cv {
-  @apply leading-5 prose prose-sm prose-a:font-normal prose-a:text-verde;
+  @apply mt-10 prose-p:leading-tight prose prose-sm prose-a:font-normal prose-a:text-verde;
 }
 
 .md-modal {
