--- a/styles/global.css
+++ b/styles/global.css
@@ -11,7 +11,7 @@
 }
 
 .cv {
-  @apply  mt-10 prose prose-sm prose-p:leading-tight prose-a:font-normal prose-a:text-verde;
+  @apply mt-10 max-w-xl prose prose-sm prose-p:leading-tight prose-a:font-normal prose-a:text-verde;
 }
 
 .md-modal {
