--- a/styles/global.css
+++ b/styles/global.css
@@ -22,15 +22,11 @@
   @apply mt-8 prose prose-sm prose-p:leading-tight prose-p:text-white prose-h1:text-white prose-h1:font-light prose-h2:text-white prose-h3:text-white prose-tr:text-white prose-th:text-white prose-h4:text-white prose-a:font-normal prose-a:text-verde;
 }
 
-/* hide scrollbar on Internet Explorer and Microsoft Edge*/
-/* * {
-  -ms-overflow-style: none;
+.sensiblog {
+  @apply flex flex-col flex-wrap h-full gap-x-12 prose prose-p:leading-snug prose-p:ml-0 prose-p:text-white prose-h1:text-white prose-h1:font-light prose-h2:text-white prose-h3:text-white prose-tr:text-white prose-th:text-white prose-h4:text-white prose-a:font-normal prose-a:text-verde;
 }
 
-::-webkit-scrollbar {
-  display: none;
-} */
-
+/* Hide scrollbar for Chrome */
 .no-scroll-bar::-webkit-scrollbar {
   display: none;
 }
