--- a/styles/global.css
+++ b/styles/global.css
@@ -41,12 +41,12 @@
 }
 
 .sensiblog {
-  @apply flex flex-row px-12 py-12 w-full
-  prose-sm prose-invert prose 
-  prose-img:mt-0 prose-img:mb-0 
-  prose-p:mt-0 prose-p:leading-snug prose-p:ml-0 prose-p:w-96
-  prose-h1:font-light 
-  prose-a:font-normal prose-a:text-verde;
+  @apply shrink-0 max-w-none w-5/12
+  prose prose-sm prose-invert
+  prose-img:mt-0 prose-img:mb-3 
+  prose-p:mt-0 prose-p:leading-snug prose-p:ml-0 prose-p:mb-3
+  prose-h1:mb-3 prose-h2:mb-3 prose-h3:mb-3
+  prose-a:text-verde;
 }
 
 /* Hide scrollbar for Chrome */
