--- a/styles/global.css
+++ b/styles/global.css
@@ -41,10 +41,10 @@
 }
 
 .sensiblog {
-  @apply shrink-0 max-w-none w-6/12 pr-12
-  prose prose-sm prose-invert
-  prose-img:mt-6 prose-img:mb-6 
-  prose-p:mt-0 prose-p:leading-snug prose-p:ml-0 prose-p:mb-4 prose-p:w-full
+  @apply shrink-0 max-w-none  pr-20
+  prose prose-invert
+  prose-img:mb-6 prose-img:mt-0 prose-img:w-full prose-img:max-w-2xl
+  prose-p:mt-0 prose-p:leading-snug prose-p:ml-0 prose-p:mb-4 prose-p:w-full prose-p:max-w-xl
   prose-h1:mb-4 prose-h2:mb-4 prose-h3:mb-4
   prose-a:text-verde;
 }
