--- a/styles/global.css
+++ b/styles/global.css
@@ -41,7 +41,8 @@
 }
 
 .sensiblog {
-  @apply shrink-0 max-w-none pr-20
+  @apply shrink-0 max-w-none pr-0 md:pr-20
+  prose-sm md:prose-base
   prose prose-invert
   prose-img:mb-6 prose-img:mt-0 prose-img:w-full prose-img:max-w-2xl
   prose-p:mt-0 prose-p:leading-snug prose-p:ml-0 prose-p:mb-4 prose-p:w-full prose-p:max-w-xl
