--- a/styles/global.css
+++ b/styles/global.css
@@ -50,6 +50,26 @@
   prose-a:text-verde;
 }
 
+.posible {
+  @apply shrink-0 max-w-none pr-0 md:pr-16
+  prose-sm md:prose-base
+  prose
+  prose-img:mb-6 prose-img:mt-0 prose-img:w-full prose-img:max-w-2xl
+  prose-p:mt-0 prose-p:leading-snug prose-p:ml-0 prose-p:mb-4 prose-p:w-full prose-p:max-w-xl
+  prose-h1:mb-4 prose-h2:mb-4 prose-h3:mb-4
+  prose-a:text-verde;
+}
+
+.posible-description {
+  @apply shrink-0 max-w-none
+  prose-sm md:prose-base
+  prose
+  prose-img:mb-6 prose-img:mt-0 prose-img:w-full prose-img:max-w-2xl
+  prose-p:mt-0 prose-p:leading-snug prose-p:ml-0 prose-p:mb-4 prose-p:w-96 prose-p:max-w-6xl
+  prose-h1:mb-4 prose-h2:mb-4 prose-h3:mb-4
+  prose-a:text-verde;
+}
+
 /* Hide scrollbar for Chrome */
 .no-scroll-bar::-webkit-scrollbar {
   display: none;
